ros2_ws/src/minisumo_core/log/build_2026-04-15_13-25-41/minisumo_core/stderr.log
  File "/home/dae/ros2_ws/src/minisumo_core/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/odometria.py", line 59
    a)
     ^
SyntaxError: unmatched ')'

